@@ -1,4 +1,10 @@
-#serial 3
+# longlong.m4 serial 4
+dnl Copyright (C) 1999-2003 Free Software Foundation, Inc.
+dnl This file is free software, distributed under the terms of the GNU
+dnl General Public License.  As a special exception to the GNU General
+dnl Public License, this file may be distributed as part of a program
+dnl that contains a configuration script generated by Autoconf, under
+dnl the same distribution terms as the rest of that program.
 
 dnl From Paul Eggert.
 
@@ -7,13 +13,13 @@ dnl From Paul Eggert.
 AC_DEFUN([jm_AC_TYPE_LONG_LONG],
 [
   AC_CACHE_CHECK([for long long], ac_cv_type_long_long,
-  [AC_TRY_LINK([long long ll = 1; int i = 63;],
+  [AC_TRY_LINK([long long ll = 1LL; int i = 63;],
     [long long llmax = (long long) -1;
      return ll << i | ll >> i | llmax / ll | llmax % ll;],
     ac_cv_type_long_long=yes,
     ac_cv_type_long_long=no)])
   if test $ac_cv_type_long_long = yes; then
     AC_DEFINE(HAVE_LONG_LONG, 1,
-      [Define if you have the long long type.])
+      [Define if you have the 'long long' type.])
   fi
 ])
